index.htmlのプロトタイプを一部変更

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 Video = function()
 {
 	//ここにオブジェクトごとに、独立させたい、プロパティーやメソッドを書く。
-	
-	
+   this.videoobject = document.getElementById("video");
+
+
+
 	
 }
-//プロパティーをつくる。
-Video.prototype.videoobject = document.getElementById("video");
 
 //関数オブジェクトVideoのplayメソッドを定義する。
 Video.prototype.play = function()
